--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body{
     color: #333;
-    font-family: Arial;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
 }
 #container {
